k8s/casa/apps/radioterio/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: radioterio
  labels:
    name: radioterio
