k8s/casa/apps/radioterio/api-server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  replicas: 2
  selector:
    matchLabels:
      deployment: api-server
  template:
    metadata:
#      annotations:
#        prometheus.io/scrape: "true"
#        prometheus.io/port: "8080"
      labels:
        deployment: api-server
    spec:
      containers:
        - name: api-server
          image: pldin601/radioterio-api-server@sha256:a26d0fcf3dd2c7d4b441f52ef5d29c626bbe86091fadd5a0e984032ee7f606a7
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "1024Mi"
              cpu: "600m"
