k8s/casa/apps/radioterio/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: frontend
  template:
    metadata:
      labels:
        deployment: frontend
    spec:
      containers:
        - name: frontend
          image: pldin601/radioterio-frontend:88db8d0ccf6228e42af4aeab8f7de34c27b94597
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "1024Mi"
              cpu: "600m"
