k8s/casa/apps/radioterio/redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: redis
  template:
    metadata:
      labels:
        deployment: redis
    spec:
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
      containers:
        - name: redis
          image: redis:alpine3.18
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          volumeMounts:
            - mountPath: "/data"
              name: redis-data
