k8s/casa/apps/radioterio/ted-irens-rtmp-encoder.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ted-irens-rtmp-encoder
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      deployment: ted-irens-rtmp-encoder
  template:
    metadata:
      labels:
        deployment: ted-irens-rtmp-encoder
    spec:
      containers:
        - name: ted-irens-rtmp-encoder
          image: pldin601/radioterio-rtmp-encoder:c3f180bc3098ba86a1a5d65053fc6c2a2f792a5c
          restartPolicy: Always
          securityContext:
            privileged: true
          volumeMounts:
            - name: dev-dri
              mountPath: /dev/dri
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1500m"
      volumes:
        - name: dev-dri
          hostPath:
            path: /dev/dri
