k8s/casa/apps/radioterio/api-server-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: api-server
spec:
  selector:
    deployment: api-server
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
