k8s/casa/apps/radioterio/frontend-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    deployment: frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
