k8s/casa/apps/radioterio/playback-server-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: playback-server
spec:
  selector:
    deployment: playback-server
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
