k8s/casa/apps/radioterio/redis-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: redis
spec:
  selector:
    deployment: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
